# iotics-cli

./: .gitignore  Cargo.toml  README.md  ontology.ttl  queries.sparql  semantics.md
configuration/: .gitignore  base.yaml  sample.yaml
src/: main.rs
src/commands/: delete_all_twins.rs  delete_twins.rs  delete_twins_by_model.rs  describe_twin.rs  follow_by_model.rs  helpers.rs  list_hosts.rs  mod.rs  settings.rs
src/commands/did_kg/: coordinator_actor.rs  did_kg.rs  diddy.rs  host_actor.rs  messages.rs  mod.rs  resolver.rs
src/commands/list_hosts/: coordinator_actor.rs  host_actor.rs  list_hosts.rs  messages.rs  mod.rs
