[package]
name = "iotics-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
anyhow = "1.0"
structopt = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
config = "0.11"
serde = { version = "1", features = ["derive"] }
serde-aux = "2.2.0"
yansi = "0.5.0"
async-trait = "0.1"

# use this if you want to be able to change both repos in the same time
# iotics-grpc-client = { path = "../iotics-grpc-client-rust" }
iotics-grpc-client = { git = "https://github.com/Iotic-Labs/iotics-grpc-client-rust.git" }

# use this if you want to be able to change both repos in the same time
# iotics-identity = { path = "../iotics-identity-go/ffi/rust" }
iotics-identity = { git = "https://github.com/Iotic-Labs/iotics-identity-go.git" }
