[package]
name = "iotics-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-rt = "2.7"
anyhow = "1.0"
async-trait = "0.1"
config = "0.13"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
run_script = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "3.0"
structopt = "0.3"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }
yansi = "0.5"

# use this if you want to be able to change both repos in the same time
# iotics-grpc-client = { path = "../iotics-grpc-client-rs" }
iotics-grpc-client = "0.2"

# use this if you want to be able to change both repos in the same time
# iotics-identity = { path = "../iotics-identity-go/ffi/rust" }
iotics-identity = { git = "https://github.com/Iotic-Labs/iotics-identity-go.git" }
